--- a/game/random.html
+++ b/game/random.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>랜덤 미션 뽑기 🎲</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="YCC_logo.png" href="favicon.png">
+  <link rel="icon" type="image/png" href="YCC_logo.png">
 </head>
 <body>
   <h1>랜덤 미션 뽑기 🎲</h1>
