--- a/game/random.html
+++ b/game/random.html
@@ -18,6 +18,7 @@
       <option value="웃김">웃김</option>
       <option value="도전">도전</option>
       <option value="힐링">힐링</option>
+      <option value="랜덤">랜덤</option>
     </select>
   </div>
 
